--- a/atendimento/templates/em-atendimento.html
+++ b/atendimento/templates/em-atendimento.html
@@ -1,15 +1,22 @@
 <div class="em-atendimento">
-{% extends 'template.html' %}
-{% block subtitulo %}
-- Atendimento
-{% endblock %}
-{% block content %}
+  {% extends 'template.html' %}
+  {% block subtitulo %}
+  - Atendimento
+  {% endblock %}
+  {% block content %}
 
   <h1>EM ATENDIMENTO</h1>
-  <p>Tipo de atendimento: {{ senha.tipo_atendimento.nome }}</p>
-  <p>Senha: {{ senha.numero_senha }}</p>
- <!---  <p>Nome do cliente: {{ senha.nome_cliente }}</p> -->
-  <p>Data do atendimento: {{ senha.data_atendimento }}</p>
+  <hr>
+  <p>Tipo de atendimento: <br>
+    <span class="spanAtend"><b>{{ senha.tipo_atendimento.nome }}</b></span>
+  </p>
+  <p>Senha:<br>
+    <span class="spanAtend"> <b>{{ senha.numero_senha }}</b></span>
+  </p>
+  <!---  <p>Nome do cliente: {{ senha.nome_cliente }}</p> -->
+  <p>Data do atendimento:<br>
+    <span class="spanData"> <b> {{ senha.data_atendimento }}</b></span>
+  </p>
   <a href="/finalizar-atendimento/{{senha.id}}/{{prefixo}}">Finalizar atendimento</a>
 
   {% endblock %}
