--- a/atendimento/templates/proxima_senha.html
+++ b/atendimento/templates/proxima_senha.html
@@ -5,11 +5,8 @@
 {% endblock %}
 {% block content %}
 
-  {% if senha %}
-  <h1>Chamando</h1>
-  {% else %}
   <h1>Em espera</h1>
-  {% endif %}
+  <hr>
   <p>Tipo de atendimento: {{ senha.tipo_atendimento.nome }}</p>
   <p>Senha: {{ senha.numero_senha }}</p>
   <p>Nome do cliente: {{ senha.nome_cliente }}</p>
@@ -20,7 +17,7 @@
     Atender
   </a>
   {% else %}
-  <a href="/chamar-proxima-senha/{{prefixo}}">
+  <a id="btnCall" href="/chamar-proxima-senha/{{prefixo}}">
     Chamar próximo da fila
   </a>
   {% endif %}
@@ -38,7 +35,9 @@
       </tbody>
     </table>
   </div> -->
-  <p>Quantidade de pessoas na fila:</p>
+  <div class="peopleFila">
+    <p>Quantidade de pessoas na fila:</p>
+  </div>
   <div class="pessoas-fila">
     <p id="Paragrafo-G">G:</p>
     <p id="quantFila"></p>
