--- a/atendimento/templates/em-atendimento.html
+++ b/atendimento/templates/em-atendimento.html
@@ -15,7 +15,7 @@
   </p>
   <!---  <p>Nome do cliente: {{ senha.nome_cliente }}</p> -->
   <p>Data do atendimento:<br>
-    <span class="spanData"> <b> {{ senha.data_atendimento }}</b></span>
+    <span class="spanData"> <b> {{ senha.data_inicio }}</b></span>
   </p>
   <a href="/finalizar-atendimento/{{senha.id}}/{{prefixo}}">Finalizar atendimento</a>
 
