--- a/atendimento/static/css/style.css
+++ b/atendimento/static/css/style.css
@@ -6,11 +6,15 @@ html {
 body {
     background: #0D578E;
     color: #fff;
+    height: 100%;
+    width: 100%;
+    margin: 0
 }
 
-hr{
+hr {
     margin-top: 0px;
 }
+
 /* Gerar Senha */
 
 .gerar-senha {
@@ -23,6 +27,12 @@ hr{
     margin-left: auto;
     margin-right: auto;
     width: 90%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
 }
 
 label[for="2"]::after {
@@ -192,16 +202,20 @@ p#quantProc {
     background: #fff;
     color: #000;
     font-size: 40px;
-    width: fit-content;
+    width: 38%;
     padding: 2% 5%;
-    margin-left: auto;
-    margin-right: auto;
+    float: left;
     border-radius: 35px;
+    margin-top: 120px;
+    height: 52%;
 }
 
 .proxima-senha h1 {
     margin: 15px;
     margin-bottom: 0px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 140%;
 }
 
 .proxima-senha p {
@@ -210,7 +224,7 @@ p#quantProc {
     font-size: 40px;
     text-align: center;
     text-decoration: solid;
-    font-family: sans-serif ;
+    font-family: sans-serif;
 }
 
 .proxima-senha a {
@@ -222,11 +236,15 @@ p#quantProc {
     width: 100%;
     display: flex;
     justify-content: center;
+    margin-top: 20px;
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;
+    ;
 }
 
-.proxima-senha #btnCall[href="/chamar-proxima-senha/"]:hover{
-    text-decoration: underline; 
-} 
+.proxima-senha #btnCall[href="/chamar-proxima-senha/"]:hover {
+    text-decoration: underline;
+}
 
 .proxima-senha #btnCall[href="/chamar-proxima-senha/"] {
     background: gray;
@@ -238,6 +256,49 @@ p#quantProc {
     display: grid;
     justify-content: center;
     font-size: 30px;
+}
+
+li {
+    font-size: 15px;
+    text-decoration: none;
+    margin-top: 20px;
+    padding: 2%;
+    border: 1px solid black;
+    border-radius: 20px;
+    width: 50%;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 0;
+    text-align: center;
+}
+
+h2 {
+    margin: 15px;
+    margin-bottom: 0px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 100%;
+    height: 65px;
+}
+
+.pessoas-fila {
+    background: #fff;
+    color: #000;
+    font-size: 40px;
+    width: 38%;
+    padding: 2% 5%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 35px;
+    float: right;
+    margin-top: 120px;
+    height: 52%
+}
+
+.pessoas-fila p {
+    font-size: 36px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-shadow: 1px 1px 0 #555
 }
 
 .peopleFila p {
@@ -282,11 +343,11 @@ p#quantProc {
 }
 
 #paragrafo-G {
-    text-align: right;
+    text-align: left;
 }
 
 #paragrafo-P {
-    text-align: center;
+    text-align: left;
 }
 
 #paragrafo-C {
@@ -322,7 +383,7 @@ p#quantProc {
     text-align: center;
 }
 
-.em-atendimento a:hover{
+.em-atendimento a:hover {
     text-decoration: underline;
     background: #aa1414;
 }
@@ -433,4 +494,54 @@ p#erro-titulo {
     font-size: 80px;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: black;
+}
+
+@media (max-width: 1024px) {
+    .proxima-senha {
+        width: 88%;
+        padding: 2% 5%;
+        float: unset;
+        border-radius: 35px;
+        margin-top: 120px;
+        height: 52%;
+    }
+
+    .pessoas-fila {
+        width: 88%;
+        padding: 2% 5%;
+        margin-left: auto;
+        margin-right: auto;
+        border-radius: 35px;
+        float: unset;
+        margin-top: 120px;
+        height: 52%;
+    }
+}
+
+@media (max-width: 768) {
+    .proxima-senha {
+        width: 38%;
+        padding: 2% 5%;
+        float: unset;
+        border-radius: 35px;
+        margin-top: 120px;
+        height: 52%;
+    }
+
+    .pessoas-fila {
+        width: 38%;
+        padding: 2% 5%;
+        margin-left: auto;
+        margin-right: auto;
+        border-radius: 35px;
+        float: unset;
+        margin-top: 120px;
+        height: 52%
+    }
+}
+
+@media (max-width: 1331px) {
+    .pessoas-fila hr{
+        margin-top: 5%;
+    }
 }
