--- a/atendimento/templates/proxima_senha.html
+++ b/atendimento/templates/proxima_senha.html
@@ -41,7 +41,7 @@
   <h2>Lista de Pessoas na Fila:</h2>
   <hr>
   <p id="Paragrafo-G">Fila Geral: <span id="quantFila"></span></p>
-  <p id="Paragrafo-P">Fila Preferencial: <span id="quantPref"></span></p>
+  <p id="Paragrafo-P">Fila Alvará: <span id="quantPref"></span></p>
   {% endif %}
   {% if senha %}
   <a href="/em-atendimento/{{senha.id}}/{{prefixo}}">
