--- a/atendimento/templates/proxima_senha.html
+++ b/atendimento/templates/proxima_senha.html
@@ -40,8 +40,11 @@
   {% else %}
   <h2>Lista de Pessoas na Fila:</h2>
   <hr>
+  {% if atendente.tipo_atendimento.nome == 'Geral' %}
   <p id="Paragrafo-G">Fila Geral: <span id="quantFila"></span></p>
+  {% else %}
   <p id="Paragrafo-P">Fila Alvará: <span id="quantPref"></span></p>
+  {% endif %}
   {% endif %}
   {% if senha %}
   <a href="/em-atendimento/{{senha.id}}/{{prefixo}}">
