Waitress update e fixes

--- a/atendimento/templates/template.html
+++ b/atendimento/templates/template.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SenhaFácil {% block subtitulo %}{% endblock %}</title>
+    <link rel="icon" type="image/png" href="/static/img/em-formacao.png">
     <link rel="stylesheet" href="/static/css/style.css">
+    
 </head>
 <body>
 {% block content %}
