--- a/atendimento/templates/proxima_senha.html
+++ b/atendimento/templates/proxima_senha.html
@@ -46,8 +46,8 @@
   {% if atendente.tipo_atendimento.nome == 'Alvará' %}
   <p id="Paragrafo-G">Fila Alvará: <span id="quantPref"></span></p>
   {% endif %}
-  {% if atendente.tipo_atendimento.nome == 'Junta Comercial' %}
-  <p id="Paragrafo-P">Fila Junta Comercial: <span id="quantProc"></span></p>
+  {% if atendente.tipo_atendimento.nome == 'Bloqueio' %}
+  <p id="Paragrafo-P">Fila Bloqueio: <span id="quantProc"></span></p>
   {% endif %}
   {% comment %} {% endif %} {% endcomment %}
   {% if senha %}
